--- a/app/src/main/res/layout/ui.xml
+++ b/app/src/main/res/layout/ui.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cat"
-    tools:context="com.example.minenliang.ai_ui.MainActivity">
+    tools:context="com.example.minenliang.ai_ui.uiActivity">
 
     <Button
         android:id="@+id/Camera"
@@ -16,6 +16,7 @@
         android:layout_marginRight="152dp"
         android:layout_marginTop="60dp"
         android:text="Camera"
+        android:onClick="btnGo"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
